--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,10 @@
 dependencies:
+  pre:
+    # Install newer version of Valgrind from custom repo so Test::Nginx's
+    # num-callers works: https://github.com/openresty/test-nginx/pull/17
+    - sudo add-apt-repository -y ppa:jtaylor/jtaylor
+    - sudo apt-get update -q
+    - sudo apt-get -y install valgrind
   cache_directories:
     - "t/build"
     - "t/tmp"
