--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,6 @@
 dependencies:
   pre:
+    - make prepare
     # Install newer version of Valgrind from custom repo so Test::Nginx's
     # num-callers works: https://github.com/openresty/test-nginx/pull/17
     - sudo add-apt-repository -y ppa:jtaylor/jtaylor
