--- a/config
+++ b/config
@@ -1,3 +1,3 @@
 ngx_addon_name=ngx_http_upstream_dynamic_servers_module
-HTTP_MODULES="$HTTP_MODULES ngx_http_upstream_dynamic_servers_module"
+HTTP_MODULES=$(echo $HTTP_MODULES | sed "s/ngx_http_upstream_module/ngx_http_upstream_dynamic_servers_module ngx_http_upstream_module/")
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_upstream_dynamic_servers.c"
